tup/parse/testdata/error/review/expressions.tup
# unclosed tuple literal
_ = (1, 2

error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10

# unclosed array literal
_ = [1, 2, 3

error: expecting "]", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# binary expression missing right operand
_ = 1 +

error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:8

# unclosed block
_ = {
    x = 1
    x

error: expecting "}", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:3:6

# if expression missing condition
_ = if

error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7

# if expression missing then branch
_ = if true

error: expecting "block", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12

# if expression with block condition missing then branch
_ = if { 1 }

error: expecting "block", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# function call missing closing paren
_ = foo(1, 2

error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# labeled tuple literal missing colon
_ = (a 1, b: 2, c: 3)

error: expecting "expression", got "("
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:5

# labeled tuple literal trailing unlabeled member
_ = (a: 1, b: 2, c)

error: expecting ")", got "c"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:18

# member access missing field name
_ = user.

error: expecting "field name", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10

# tuple update with unlabeled tuple
_ = user.(1, 2)

error: expecting "field name", got "1"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:11

# import with identifier instead of string
_ = import(io)

error: expecting "string literal", got "io"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12

# meta expression missing labeled arguments
_ = $()

error: expecting "labeled argument", got ")"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7
